test/parse/bad-string-unicode-escape-unterminated.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (func) (export "foo\u{045" (func 0)))
(;; STDERR ;;;
out/test/parse/bad-string-unicode-escape-unterminated.txt:3:28: error: bad escape "\u{045"
(module (func) (export "foo\u{045" (func 0)))
                           ^^^^^^
out/test/parse/bad-string-unicode-escape-unterminated.txt:3:24: error: unexpected token "Invalid", expected a quoted string (e.g. "foo").
(module (func) (export "foo\u{045" (func 0)))
                       ^^^^^^^^^^^
out/test/parse/bad-string-unicode-escape-unterminated.txt:3:42: error: unexpected token 0, expected ).
(module (func) (export "foo\u{045" (func 0)))
                                         ^
;;; STDERR ;;)
